# JPEG_Project

./: CMakeLists.txt  LICENSE  README.md  decomp_lenna.pgm  lena.pgm  lenna.huff  lenna.rle  lenna_color_Cb.huff  lenna_color_Y.huff  lenna_color_decomp.ppm  main.cpp  recon_lenna.pgm  sample_test_Cr.huff  sample_test_Y.huff  sample_test_out.ppm
docs/: Doxyfile  project_report.aux  project_report.out  project_report.tex  project_report.toc
docs/docs/html/: navtreedata.js
docs/docs/latex/: refman.tex
docs/html/: ColorCodecCommon_8h.html  ColorCodecCommon_8h.js  ColorCodecCommon_8h__dep__incl.map  ColorCodecCommon_8h__dep__incl.md5  ColorCodecCommon_8h__incl.map  ColorCodecCommon_8h__incl.md5  ColorCodecCommon_8h_source.html  README_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  cCompressionCouleur_8cpp.html  cCompressionCouleur_8cpp__incl.map  cCompressionCouleur_8cpp__incl.md5  cCompressionCouleur_8h.html  cCompressionCouleur_8h.js  cCompressionCouleur_8h__dep__incl.map  cCompressionCouleur_8h__dep__incl.md5  cCompressionCouleur_8h__incl.map  cCompressionCouleur_8h__incl.md5  cCompressionCouleur_8h_source.html  cCompression_8cpp.html  cCompression_8cpp.js  cCompression_8cpp__incl.map  cCompression_8cpp__incl.md5  cCompression_8h.html  cCompression_8h.js  cCompression_8h__dep__incl.map  cCompression_8h__dep__incl.md5  cCompression_8h__incl.map  cCompression_8h__incl.md5  cCompression_8h_source.html  cDecompressionCouleur_8cpp.html  cDecompressionCouleur_8cpp__incl.map  cDecompressionCouleur_8cpp__incl.md5  cDecompressionCouleur_8h.html  cDecompressionCouleur_8h.js  cDecompressionCouleur_8h__dep__incl.map  cDecompressionCouleur_8h__dep__incl.md5  cDecompressionCouleur_8h__incl.map  (+352 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  (+46 more)
docs/latex/: ColorCodecCommon_8h.tex  ColorCodecCommon_8h__dep__incl.md5  ColorCodecCommon_8h__incl.md5  ColorCodecCommon_8h_source.tex  annotated.tex  cCompressionCouleur_8cpp.tex  cCompressionCouleur_8cpp__incl.md5  cCompressionCouleur_8h.tex  cCompressionCouleur_8h__dep__incl.md5  cCompressionCouleur_8h__incl.md5  cCompressionCouleur_8h_source.tex  cCompression_8cpp.tex  cCompression_8cpp__incl.md5  cCompression_8h.tex  cCompression_8h__dep__incl.md5  cCompression_8h__incl.md5  cCompression_8h_source.tex  cDecompressionCouleur_8cpp.tex  cDecompressionCouleur_8cpp__incl.md5  cDecompressionCouleur_8h.tex  cDecompressionCouleur_8h__dep__incl.md5  cDecompressionCouleur_8h__incl.md5  cDecompressionCouleur_8h_source.tex  cDecompression_8cpp.tex  cDecompression_8cpp__incl.md5  cDecompression_8h.tex  cDecompression_8h__dep__incl.md5  cDecompression_8h__incl.md5  cDecompression_8h_source.tex  cHuffman_8cpp.tex  cHuffman_8cpp__incl.md5  cHuffman_8cpp_a116f487d7d387194157da75a394105dc_cgraph.md5  cHuffman_8cpp_a116f487d7d387194157da75a394105dc_icgraph.md5  cHuffman_8cpp_a24a84fde39db5599f3775a435aed0f50_cgraph.md5  cHuffman_8cpp_a24a84fde39db5599f3775a435aed0f50_icgraph.md5  cHuffman_8h.tex  cHuffman_8h__dep__incl.md5  cHuffman_8h__incl.md5  cHuffman_8h_source.tex  c_compression_8cpp.tex  (+172 more)
include/core/: ColorCodecCommon.h  cCompression.h  cCompressionCouleur.h  cDecompression.h  cDecompressionCouleur.h  cHuffman.h
include/dct/: dct.h
include/quantification/: quantification.h
src/: main.cpp
src/core/: cCompression.cpp  cCompressionCouleur.cpp  cDecompression.cpp  cDecompressionCouleur.cpp  cHuffman.cpp
src/dct/: dct.cpp
src/quantification/: quantification.cpp
tests/: CMakeLists.txt  dat_to_pgm.cpp  lena.huff  lena.pgm  main.py  test_color.cpp  test_compression.cpp  test_dct.cpp  test_decompression.cpp  test_huffman.cpp  test_quantification.cpp  test_rle.cpp  test_total.cpp  tests_01_original.pgm  tests_02_compressed_preview.pgm  tests_04_decompressed.pgm  tests_05_diff.pgm
tools/: make_sample_ppm.py
